system/static/styles.css
.navbar-custom { background-color: Indigo  ; }

nav .navbar-brand
{
    /* size for brand */
    font-size: xx-large;
    
}

/* colors for brand */
nav .navbar-brand .blue
{
    color: #537fbe;
}
nav .navbar-brand .red
{
    color: #ea433b;
}
nav .navbar-brand .yellow
{
    color: #f5b82e;
}
nav .navbar-brand .green
{
    color: #2e944b;
}

nav .navbar-brand .purple
{
    color: #6f42c1;
}

nav .navbar-custom {
    background-color: #6f42c1;
}

main .form-control
{
    /* center form controls */
    display: inline-block;

    /* override Bootstrap's 100% width for form controls */
    width: auto;
}

main
{
    /* scroll horizontally as needed */
    overflow-x: auto;

    /* center contents */
    text-align: center; 
}

main img
{
    /* constrain images on small screens */
    max-width: 100%;
	display: inline-block
}

.alert-error {
  background-color: deepskyblue;
  color: black;
}

.alert-info {
  background-color: lightyellow;
  color: black;
}

#button-csv{
    color: #fff;
    background-color: #28a745;
    border-color: #28a745;
    outline: none;
}

#button-csv:hover{
    background-color: #166128;
    border-color: #166128;
}


.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

